--- a/CART/shop.html
+++ b/CART/shop.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="menu__right">
                     <div class="cart">
-                        <div class="count"><span>5</span></div>
+                        <div class="count"><span data-cart-amount>0</span></div>
                         <div class="icon" data-cart-icon>
                             <svg height="512" viewBox="0 0 64 64" width="512" xmlns="http://www.w3.org/2000/svg">
                                 <g>
@@ -89,88 +89,6 @@
                                 </g>
                             </svg>
                             <div class="cart-content" data-cart-content style="display: none;">
-
-                                <div class="cart-content__line">
-                                    <div class="cart-content__img">
-                                        <img src="http://127.0.0.1:5500/cart/images/01.jpg">
-                                    </div>
-                                    <div class="cart-content__title">
-                                        Plastikinės ekologiškos samanos
-                                    </div>
-                                    <div class="cart-content__price">
-                                        12.55
-                                    </div>
-                                    <div class="cart-content__amount">
-                                        2
-                                    </div>
-                                    <div class="cart-content__remove">
-                                        <span>x</span>
-                                    </div>
-                                </div>
-
-                                <div class="cart-content__line">
-                                    <div class="cart-content__img">
-                                        <img src="http://127.0.0.1:5500/cart/images/01.jpg">
-                                    </div>
-                                    <div class="cart-content__title">
-                                        Plastikinės ekologiškos samanos
-                                    </div>
-                                    <div class="cart-content__price">
-                                        12.55
-                                    </div>
-                                    <div class="cart-content__amount">
-                                        2
-                                    </div>
-                                    <div class="cart-content__remove">
-                                        <span>x</span>
-                                    </div>
-                                </div>
-
-                                <div class="cart-content__line">
-                                    <div class="cart-content__img">
-                                        <img src="http://127.0.0.1:5500/cart/images/01.jpg">
-                                    </div>
-                                    <div class="cart-content__title">
-                                        Plastikinės ekologiškos samanos
-                                    </div>
-                                    <div class="cart-content__price">
-                                        12.55
-                                    </div>
-                                    <div class="cart-content__amount">
-                                        2
-                                    </div>
-                                    <div class="cart-content__remove">
-                                        <span>x</span>
-                                    </div>
-                                </div>
-
-                                <div class="cart-content__line">
-                                    <div class="cart-content__img">
-                                        <img src="http://127.0.0.1:5500/cart/images/01.jpg">
-                                    </div>
-                                    <div class="cart-content__title">
-                                        Plastikinės ekologiškos samanos
-                                    </div>
-                                    <div class="cart-content__price">
-                                        12.55
-                                    </div>
-                                    <div class="cart-content__amount">
-                                        2
-                                    </div>
-                                    <div class="cart-content__remove">
-                                        <span>x</span>
-                                    </div>
-                                </div>
-
-                                <div class="cart-content__line">
-                                    <div class="cart-content__total">
-                                        <span class="text">Viso: </span>
-                                        <span class="value">45.54 </span>
-                                        <span class="text">Eur </span>
-                                    </div>
-                                </div>
-
-
                             </div>
                         </div>
                     </div>
@@ -210,6 +128,28 @@
                 <button data-add-button>Į krepšelį</button>
                 <input data-add-amount type="number" min="1" value="1">
             </div>
+        </div>
+    </div>
+</template>
+
+<template data-cart-product-template>
+    <div class="cart-content__line">
+        <div class="cart-content__img"><img data-image></div>
+        <div class="cart-content__title" data-title></div>
+        <div class="cart-content__price" data-price></div>
+        <div class="cart-content__amount" data-amount></div>
+        <div class="cart-content__remove">
+            <span data-remove>x</span>
+        </div>
+    </div>
+</template>
+
+<template data-cart-total-template>
+    <div class="cart-content__line">
+        <div class="cart-content__total">
+            <span class="text">Viso: </span>
+            <span class="value" data-value></span>
+            <span class="text">Eur </span>
         </div>
     </div>
 </template>
