--- a/Mentorius/002 GRID'as/index.html
+++ b/Mentorius/002 GRID'as/index.html
@@ -17,8 +17,14 @@
         <section class="sec-1">Section 1</section> 
         <section class="sec-2">Section 2</section>
         <section class="sec-3">Section 3</section>
-        <section class="sec-4">Section 4</section>
-        <section class="sec-5">Section 5</section>
+        <section class="sec-4 card">
+            <div class="side front">Section 4</div>
+            <div class="side back"></div>
+        </section>
+        <section class="sec-5 card">
+            <div class="side front">Section 5</div>
+            <div class="side back"></div>
+        </section>
         <section class="sec-6">Section 6</section>
         <section class="promo">Promo</section>
 
