--- a/nd/02/index.html
+++ b/nd/02/index.html
@@ -21,6 +21,11 @@
 
     <section id="uzd7"></section>
 
+    <section id="uzd8">
+        <ul></ul>
+        <ul></ul>
+    </section>
+
 
 </body>
 </html>
