--- a/nd/03/index.html
+++ b/nd/03/index.html
@@ -19,5 +19,16 @@
 
     <section id="uzd6"></section>
 
+    <section id="uzd7"></section>
+
+    <section id="uzd8">
+        <ul id="trumpi"></ul>
+        <ul id="ilgi"></ul>
+    </section>
+
+    <section class="uzd9">
+        <ul id="nodog"></ul>
+    </section>
+
 </body>
 </html>
