--- a/Mentorius/003 laikrodis/index.html
+++ b/Mentorius/003 laikrodis/index.html
@@ -16,9 +16,10 @@
     </div>
 
     <div class="clock-analogue">
-        <div class="hours"></div>
-        <div class="minutes"></div>
-        <div class="seconds"></div>
+        <div class="h-12">XII</div>
+        <div class="arr hours"></div>
+        <div class="arr minutes"></div>
+        <div class="arr seconds"></div>
     </div>
     
 </body>
