--- a/Mentorius/003 laikrodis/index.html
+++ b/Mentorius/003 laikrodis/index.html
@@ -21,6 +21,13 @@
         <div class="arr minutes"></div>
         <div class="arr seconds"></div>
     </div>
+
+    <div class="pomodoro">
+        <div class="slider">
+            <div class="dot"></div>
+        </div>
+        <div class="label">Pomodoro</div>
+    </div>
     
 </body>
 </html>
