--- a/Mentorius/003 laikrodis/index.html
+++ b/Mentorius/003 laikrodis/index.html
@@ -16,6 +16,12 @@
     </div>
 
     <div class="clock-analogue">
+
+        <div class="pomodoro-bg">
+            <div class="bg1"></div>
+            <div class="bg2"></div>
+        </div>
+
         <div class="h-12">XII</div>
         <div class="arr hours"></div>
         <div class="arr minutes"></div>
