--- a/Mentorius/003 laikrodis/index.html
+++ b/Mentorius/003 laikrodis/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manufacturing+Consent&family=Monoton&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">    <link rel="stylesheet" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>clock</title>
 </head>
@@ -23,6 +25,14 @@
         </div>
 
         <div class="h-12">XII</div>
+        <div class="h-1">I</div>
+        <div class="h-2">II</div>
+        <div class="h-3">III</div>
+        <div class="h-6">VI</div>
+        <div class="h-9">IX</div>
+        <div class="h-10">X</div>
+        <div class="h-11">XI</div>
+
         <div class="arr hours"></div>
         <div class="arr minutes"></div>
         <div class="arr seconds"></div>
@@ -34,6 +44,8 @@
         </div>
         <div class="label">Pomodoro</div>
     </div>
+
+    <img src="photofunky.gif" alt="Spongebob" />
     
 </body>
 </html>
