--- a/ALL/project/public/read.html
+++ b/ALL/project/public/read.html
@@ -34,21 +34,20 @@
     <template>
         <li class="list-group-item">
             <div class="item">
-                <div class="title" data-title></div>
-                <div class="frame" data-frame></div>
-
-                <div class="buttons">
-                    <button data-edit class="btn btn-success">Edit</button>
-                    <button data-show class="btn btn-info">Show</button>
-                    <button data-delete class="btn btn-danger">delete</button>
+                <div class="data">
+                    <div class="title" data-title></div>
+                    <div class="frame" data-frame></div>
                 </div>
+        
+                <div class="buttons">
+                    <a data-edit class="btn btn-success">Edit</a>
+                    <a data-show class="btn btn-info">Show</a>
+                    <a data-delete class="btn btn-danger">delete</a>
+                </div>
+        
             </div>
         </li>
     </template>
-
-
-
-
 
 </body>
 
