--- a/ALL/project/public/edit.html
+++ b/ALL/project/public/edit.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>Project NiCe - Add new ART</title>
+    <title>Project NiCe - Edit ART</title>
 </head>
 
 <body>
 
-    <div class="container" data-create>
+    <div class="container" data-edit>
         <div class="row">
             <div class="col-3"></div>
             <div class="col-6">
                 <div class="card mt-5">
                     <div class="card-header">
-                        <h1>Create new art</h1>
+                        <h1>Edit art</h1>
                         <a href="read.html">All ART</a>
                     </div>
                     <div class="card-body">
@@ -25,7 +25,7 @@
                             <label class="form-label">Art title</label>
                             <input type="text" data-title class="form-control">
                         </div>
-                        <div class="frame" data-create-frame></div>
+                        <div class="frame" data-edit-frame></div>
                         <div class="mt-2">
                             <input type="color" class="form-control form-control-color" value="#000000"
                                 title="Choose your color">
@@ -33,8 +33,8 @@
 
                         <div class="mt-5">
                             <button data-save class="btn btn-primary">Save art</button>
-                            <button data-ai class="btn btn-primary">AI</button>
                             <button data-clear class="btn btn-secondary">Clear</button>
+                            <a href="read.html" data-cancel class="btn btn-info">Cancel</a>
                         </div>
                     </div>
                 </div>
