--- a/Mentorius/005 API/index.html
+++ b/Mentorius/005 API/index.html
@@ -32,6 +32,8 @@
         </table>
     </main>
 
+    <div id="loading">[Waiting for books...]</div>
+
     <footer>
         <p>&copy; 2025</p>
     </footer>
