41 su servais ir inv 21 07

--- a/ALL/server/public/index.html
+++ b/ALL/server/public/index.html
@@ -18,5 +18,22 @@
     <div data-response></div>
 
 
+    <h2>Sąrašas CSR</h2>
+    <button data-action="get-csr">Rodyti</button>
+    <div data-list="CSR">
+        <ul>
+            <!-- Ideti duomenys -->
+        </ul>
+    </div>
+
+    <h2>Sąrašas SSR</h2>
+    <button data-action="get-ssr">Rodyti</button>
+    <div data-list="SSR">
+        <ul>
+            <!-- Ideti duomenys -->
+        </ul>
+    </div>
+
+
 </body>
 </html>
