--- a/K3 CRUD/public/show.html
+++ b/K3 CRUD/public/show.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>K3 CRUD</title>
 </head>
-<body data-create>
+<body data-show-inv>
     <header>
 
         <div class="tuščias"></div>
@@ -57,8 +57,7 @@
         </div>
 
         <div class="mt-5">
-            <button data-save class="btn btn-primary">Išsaugoti</button>
-            <button data-clear class="btn btn-secondary">Nauja sąskaita</button>
+            <a href="read.html" data-back class="btn btn-info">Grįžti</a>
         </div>
 
     </main>
