--- a/K3 CRUD/public/create.html
+++ b/K3 CRUD/public/create.html
@@ -58,7 +58,7 @@
 
         <div class="mt-5">
             <button data-save class="btn btn-primary">Išsaugoti</button>
-            <button data-clear class="btn btn-secondary">Nauja sąskaita</button>
+            <button data-all class="btn btn-secondary">Visos sąskaitos</button>
         </div>
 
     </main>
