--- a/ALL/db/public/index.html
+++ b/ALL/db/public/index.html
@@ -14,6 +14,11 @@
         <section class="view">
             <h2>View Trees</h2>
             <ul data-tree-list></ul>
+            <div>
+                <button data-sort-by-ba="name">Sort Name</button>
+                <button data-sort-by-ba="height">Sort Height</button>
+                <button data-sort-by-ba="type">Sort Type</button>
+            </div>
         </section>
         <section class="plant">
             <h2>Plant a Tree</h2>
@@ -45,7 +50,6 @@
             </form>
         </section>
     </div>
-
 
     <template data-tree-item-template>
         <li>
