--- a/JUGILA/index.html
+++ b/JUGILA/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="app.js" defer></script>
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="style.css">
     <title>Jugila</title>
 </head>
-
 <body>
     <div class="app">
         <header>
@@ -34,6 +33,12 @@
         <footer>
 
         </footer>
+    </div>
+    <div id="cookie-banner" style="display:none;">
+        <div id="cookie-box">
+          Ši svetainė naudoja slapukus, kad pagerintų jūsų patirtį. 
+          <button id="accept-cookies">Sutinku</button>
+        </div>
     </div>
 </body>
 
