api su mentorium

--- a/Mentorius/007 JS pagrindai/index.html
+++ b/Mentorius/007 JS pagrindai/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="ment.js" defer></script>
-    <title>JS 001</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="ment.js" defer></script>
+  <title>Document</title>
+  <style>
+    #bbb {
+      padding: 10rem 15rem;
+    }
+  </style>
 </head>
 <body>
-    
+  
+  <button id="bbb">Big Beatiful Button</button>
+
 </body>
 </html>
