--- a/Papildomai/007 glowing text/index.html
+++ b/Papildomai/007 glowing text/index.html
@@ -10,7 +10,7 @@
     <div class="box">
         <div class="lightBar"></div>
         <div class="topLayer"></div>
-        <h1>DevWave Diaries</h1>
+        <h1>PineLife systems</h1>
     </div>
 </body>
 </html>
