--- a/JUGILA/index.html
+++ b/JUGILA/index.html
@@ -23,7 +23,24 @@
                         <ul>
                             <li><a href="./index.html">Pradžia</a></li>
                             <li><a href="#">Apie mus</a></li>
-                            <li><a href="#">Paslaugos</a></li>
+                            <li>
+                                <div class="dropdown">
+                                    <a class="dropbtn">Paslaugos
+                                        <i class="fa fa-caret-down"></i>
+                                    </a>
+                                    <div class="dropdown-content">
+                                        <a href="#">Žemės kasimo darbai</a>
+                                        <a href="#">Elektros ir vandentiekio vedimas</a>
+                                        <a href="#">Drenažo klojimas</a>
+                                        <a href="#">Sklypų lyginimas</a>
+                                        <a href="#">Sniego valymo paslauga</a>
+                                        <a href="#">Kelmų rovimas</a>
+                                        <a href="#">Ratinio buldozerio paslaugos</a>
+                                        <a href="#">Polių gręžimas</a>
+                                        <a href="#">Pamatų atkasimas</a>
+                                    </div>
+                                </div>
+                            </li>
                             <li><a href="#">Galerija</a></li>
                             <li><a href="#">Kontaktai</a></li>
                         </ul>
@@ -48,19 +65,43 @@
             <section class="hero">
                 <div class="hero__bin">
 
-                    <div class="hero__bin__box">Sekcija 1</div>
-                    <div class="hero__bin__box">Sekcija 2</div>
-                    <div class="hero__bin__box">Sekcija 3</div>
-                    <div class="hero__bin__box">Sekcija 4</div>
-                    <div class="hero__bin__box">Sekcija 5</div>
-                    <div class="hero__bin__box">Sekcija 6</div>
+                    <div class="hero__bin__box">
+                        <img src="Img/poliuGrezimas1.jpg" alt="poliu Grezimas">
+                        <h2><a href="">Polių grežimas</a></h2>
+                        <button>Žiūrėti</button>
+                    </div>
+                    <div class="hero__bin__box">
+                        <img src="Img/kasimoDarbai.jpg" alt="kasimo Darbai">
+                        <h2><a href="">Žemės kasimo darbai</a></h2>
+                        <button>Žiūrėti</button>
+                    </div>
+                    <div class="hero__bin__box">
+                        <img src="Img/drenazoKlojimas.jpg" alt="Drenažo klojimas">
+                        <h2><a href="">Drenažo klojimas</a></h2>
+                        <button>Žiūrėti</button>
+                    </div>
+                    <div class="hero__bin__box">
+                        <img src="Img/poliuGrezimas.jpg" alt="poliuGrezimas">
+                        <h2><a href="">Elektros ir vandentiekio vedimas</a></h2>
+                        <button>Žiūrėti</button>
+                    </div>
+                    <div class="hero__bin__box">
+                        <img src="Img/buldozerio.jpg" alt="poliuGrezimas">
+                        <h2><a href="">Ratinio buldozerio paslaugos</a></h2>
+                        <button>Žiūrėti</button>
+                    </div>
+                    <div class="hero__bin__box">
+                        <img src="Img/darbai.jpg" alt="poliuGrezimas">
+                        <h2><a href="">Pamatų atkasimas</a></h2>
+                        <button>Žiūrėti</button>
+                    </div>
 
                 </div>
 
             </section>
         </main>
         <footer>
-            <p>&copy; 2025 Jugila</p> 
+            <p>&copy; 2025 Jugila</p>
         </footer>
     </div>
     <div id="cookie-banner" style="display:none;">
