--- a/Mentorius/chart/index.html
+++ b/Mentorius/chart/index.html
@@ -12,8 +12,9 @@
     <canvas id="BarChart"></canvas>
     <div class="table" data-content>
         <table>
-          <tr class="pirmaEilute" data-tabel-header></tr>
-          <tr class="antraEilute" data-table-data></tr>
+          <tr data-tabel-header></tr>
+          <tr data-table-value></tr>
+          <tr data-table-percentage></tr>
         </table>
       </div>
     </div>
