add: card animations and grid layout

--- a/JUGILA/index.html
+++ b/JUGILA/index.html
@@ -85,11 +85,11 @@
                         <h2><a href="">Elektros ir vandentiekio vedimas</a></h2>
                         <button>Žiūrėti</button>
                     </div>
-                    <div class="hero__bin__box">
+                    <!-- <div class="hero__bin__box">
                         <img src="Img/buldozerio.jpg" alt="poliuGrezimas">
                         <h2><a href="">Ratinio buldozerio paslaugos</a></h2>
                         <button>Žiūrėti</button>
-                    </div>
+                    </div> -->
                     <div class="hero__bin__box">
                         <img src="Img/darbai.jpg" alt="poliuGrezimas">
                         <h2><a href="">Pamatų atkasimas</a></h2>
